[project]
name = "markdown2html5-base"
version = "0.1.1"
description = "A foundational library for converting Markdown text into clean, modern HTML5 markup."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Anatoly Shcherbina", email = "avshcherbina@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

